app/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arinasvi-resume
  labels:
    app: arinasvi-resume
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: arinasvi-resume
